server/src/core/oql/generated/CypherParser.ts

import * as antlr from "antlr4ng";
import { Token } from "antlr4ng";

import { CypherParserListener } from "./CypherParserListener.js";
// for running tests with parameters, TODO: discuss strategy for typed parameters in CI
// eslint-disable-next-line no-unused-vars
type int = number;


export class CypherParser extends antlr.Parser {
    public static readonly ASSIGN = 1;
    public static readonly ADD_ASSIGN = 2;
    public static readonly LE = 3;
    public static readonly GE = 4;
    public static readonly GT = 5;
    public static readonly LT = 6;
    public static readonly NOT_EQUAL = 7;
    public static readonly RANGE = 8;
    public static readonly SEMI = 9;
    public static readonly DOT = 10;
    public static readonly COMMA = 11;
    public static readonly LPAREN = 12;
    public static readonly RPAREN = 13;
    public static readonly LBRACE = 14;
    public static readonly RBRACE = 15;
    public static readonly LBRACK = 16;
    public static readonly RBRACK = 17;
    public static readonly SUB = 18;
    public static readonly PLUS = 19;
    public static readonly DIV = 20;
    public static readonly MOD = 21;
    public static readonly CARET = 22;
    public static readonly MULT = 23;
    public static readonly ESC = 24;
    public static readonly COLON = 25;
    public static readonly STICK = 26;
    public static readonly DOLLAR = 27;
    public static readonly CALL = 28;
    public static readonly YIELD = 29;
    public static readonly FILTER = 30;
    public static readonly EXTRACT = 31;
    public static readonly COUNT = 32;
    public static readonly ANY = 33;
    public static readonly NONE = 34;
    public static readonly SINGLE = 35;
    public static readonly ALL = 36;
    public static readonly ASC = 37;
    public static readonly ASCENDING = 38;
    public static readonly BY = 39;
    public static readonly CREATE = 40;
    public static readonly DELETE = 41;
    public static readonly DESC = 42;
    public static readonly DESCENDING = 43;
    public static readonly DETACH = 44;
    public static readonly EXISTS = 45;
    public static readonly LIMIT = 46;
    public static readonly MATCH = 47;
    public static readonly MERGE = 48;
    public static readonly ON = 49;
    public static readonly OPTIONAL = 50;
    public static readonly ORDER = 51;
    public static readonly REMOVE = 52;
    public static readonly RETURN = 53;
    public static readonly SET = 54;
    public static readonly SKIP_W = 55;
    public static readonly WHERE = 56;
    public static readonly WITH = 57;
    public static readonly UNION = 58;
    public static readonly UNWIND = 59;
    public static readonly AND = 60;
    public static readonly AS = 61;
    public static readonly CONTAINS = 62;
    public static readonly DISTINCT = 63;
    public static readonly ENDS = 64;
    public static readonly IN = 65;
    public static readonly IS = 66;
    public static readonly NOT = 67;
    public static readonly OR = 68;
    public static readonly STARTS = 69;
    public static readonly XOR = 70;
    public static readonly FALSE = 71;
    public static readonly TRUE = 72;
    public static readonly NULL_W = 73;
    public static readonly CONSTRAINT = 74;
    public static readonly DO = 75;
    public static readonly FOR = 76;
    public static readonly REQUIRE = 77;
    public static readonly UNIQUE = 78;
    public static readonly CASE = 79;
    public static readonly WHEN = 80;
    public static readonly THEN = 81;
    public static readonly ELSE = 82;
    public static readonly END = 83;
    public static readonly MANDATORY = 84;
    public static readonly SCALAR = 85;
    public static readonly OF = 86;
    public static readonly ADD = 87;
    public static readonly DROP = 88;
    public static readonly ESC_LITERAL = 89;
    public static readonly CHAR_LITERAL = 90;
    public static readonly STRING_LITERAL = 91;
    public static readonly Integer = 92;
    public static readonly DIGIT = 93;
    public static readonly FLOAT = 94;
    public static readonly ID = 95;
    public static readonly IdentifierStart = 96;
    public static readonly IdentifierPart = 97;
    public static readonly Letter = 98;
    public static readonly SP = 99;
    public static readonly WHITESPACE = 100;
    public static readonly Comment = 101;
    public static readonly RULE_script = 0;
    public static readonly RULE_query = 1;
    public static readonly RULE_regularQuery = 2;
    public static readonly RULE_singleQuery = 3;
    public static readonly RULE_standaloneCall = 4;
    public static readonly RULE_returnSt = 5;
    public static readonly RULE_withSt = 6;
    public static readonly RULE_skipSt = 7;
    public static readonly RULE_limitSt = 8;
    public static readonly RULE_projectionBody = 9;
    public static readonly RULE_projectionItems = 10;
    public static readonly RULE_projectionItem = 11;
    public static readonly RULE_orderItem = 12;
    public static readonly RULE_orderSt = 13;
    public static readonly RULE_singlePartQ = 14;
    public static readonly RULE_multiPartQ = 15;
    public static readonly RULE_matchSt = 16;
    public static readonly RULE_unwindSt = 17;
    public static readonly RULE_readingStatement = 18;
    public static readonly RULE_updatingStatement = 19;
    public static readonly RULE_deleteSt = 20;
    public static readonly RULE_removeSt = 21;
    public static readonly RULE_removeItem = 22;
    public static readonly RULE_queryCallSt = 23;
    public static readonly RULE_parenExpressionChain = 24;
    public static readonly RULE_yieldItems = 25;
    public static readonly RULE_yieldItem = 26;
    public static readonly RULE_mergeSt = 27;
    public static readonly RULE_mergeAction = 28;
    public static readonly RULE_setSt = 29;
    public static readonly RULE_setItem = 30;
    public static readonly RULE_nodeLabels = 31;
    public static readonly RULE_createSt = 32;
    public static readonly RULE_patternWhere = 33;
    public static readonly RULE_where = 34;
    public static readonly RULE_pattern = 35;
    public static readonly RULE_expression = 36;
    public static readonly RULE_xorExpression = 37;
    public static readonly RULE_andExpression = 38;
    public static readonly RULE_notExpression = 39;
    public static readonly RULE_comparisonExpression = 40;
    public static readonly RULE_comparisonSigns = 41;
    public static readonly RULE_addSubExpression = 42;
    public static readonly RULE_multDivExpression = 43;
    public static readonly RULE_powerExpression = 44;
    public static readonly RULE_unaryAddSubExpression = 45;
    public static readonly RULE_atomicExpression = 46;
    public static readonly RULE_listExpression = 47;
    public static readonly RULE_stringExpression = 48;
    public static readonly RULE_stringExpPrefix = 49;
    public static readonly RULE_nullExpression = 50;
    public static readonly RULE_propertyOrLabelExpression = 51;
    public static readonly RULE_propertyExpression = 52;
    public static readonly RULE_patternPart = 53;
    public static readonly RULE_patternElem = 54;
    public static readonly RULE_patternElemChain = 55;
    public static readonly RULE_properties = 56;
    public static readonly RULE_nodePattern = 57;
    public static readonly RULE_atom = 58;
    public static readonly RULE_lhs = 59;
    public static readonly RULE_relationshipPattern = 60;
    public static readonly RULE_relationDetail = 61;
    public static readonly RULE_rangeLit = 62;
    public static readonly RULE_relationshipTypes = 63;
    public static readonly RULE_unionSt = 64;
    public static readonly RULE_subqueryExist = 65;
    public static readonly RULE_invocationName = 66;
    public static readonly RULE_functionInvocation = 67;
    public static readonly RULE_parenthesizedExpression = 68;
    public static readonly RULE_filterWith = 69;
    public static readonly RULE_patternComprehension = 70;
    public static readonly RULE_relationshipsChainPattern = 71;
    public static readonly RULE_listComprehension = 72;
    public static readonly RULE_filterExpression = 73;
    public static readonly RULE_countAll = 74;
    public static readonly RULE_expressionChain = 75;
    public static readonly RULE_caseExpression = 76;
    public static readonly RULE_parameter = 77;
    public static readonly RULE_literal = 78;
    public static readonly RULE_boolLit = 79;
    public static readonly RULE_numLit = 80;
    public static readonly RULE_stringLit = 81;
    public static readonly RULE_charLit = 82;
    public static readonly RULE_listLit = 83;
    public static readonly RULE_mapLit = 84;
    public static readonly RULE_mapPair = 85;
    public static readonly RULE_name = 86;
    public static readonly RULE_symbol = 87;
    public static readonly RULE_reservedWord = 88;

    public static readonly literalNames = [
        null, "'='", "'+='", "'<='", "'>='", "'>'", "'<'", "'<>'", "'..'", 
        "';'", "'.'", "','", "'('", "')'", "'{'", "'}'", "'['", "']'", "'-'", 
        "'+'", "'/'", "'%'", "'^'", "'*'", "'`'", "':'", "'|'", "'$'", "'CALL'", 
        "'YIELD'", "'FILTER'", "'EXTRACT'", "'COUNT'", "'ANY'", "'NONE'", 
        "'SINGLE'", "'ALL'", "'ASC'", "'ASCENDING'", "'BY'", "'CREATE'", 
        "'DELETE'", "'DESC'", "'DESCENDING'", "'DETACH'", "'EXISTS'", "'LIMIT'", 
        "'MATCH'", "'MERGE'", "'ON'", "'OPTIONAL'", "'ORDER'", "'REMOVE'", 
        "'RETURN'", "'SET'", "'SKIP'", "'WHERE'", "'WITH'", "'UNION'", "'UNWIND'", 
        "'AND'", "'AS'", "'CONTAINS'", "'DISTINCT'", "'ENDS'", "'IN'", "'IS'", 
        "'NOT'", "'OR'", "'STARTS'", "'XOR'", "'FALSE'", "'TRUE'", "'NULL'", 
        "'CONSTRAINT'", "'DO'", "'FOR'", "'REQUIRE'", "'UNIQUE'", "'CASE'", 
        "'WHEN'", "'THEN'", "'ELSE'", "'END'", "'MANDATORY'", "'SCALAR'", 
        "'OF'", "'ADD'", "'DROP'"
    ];

    public static readonly symbolicNames = [
        null, "ASSIGN", "ADD_ASSIGN", "LE", "GE", "GT", "LT", "NOT_EQUAL", 
        "RANGE", "SEMI", "DOT", "COMMA", "LPAREN", "RPAREN", "LBRACE", "RBRACE", 
        "LBRACK", "RBRACK", "SUB", "PLUS", "DIV", "MOD", "CARET", "MULT", 
        "ESC", "COLON", "STICK", "DOLLAR", "CALL", "YIELD", "FILTER", "EXTRACT", 
        "COUNT", "ANY", "NONE", "SINGLE", "ALL", "ASC", "ASCENDING", "BY", 
        "CREATE", "DELETE", "DESC", "DESCENDING", "DETACH", "EXISTS", "LIMIT", 
        "MATCH", "MERGE", "ON", "OPTIONAL", "ORDER", "REMOVE", "RETURN", 
        "SET", "SKIP_W", "WHERE", "WITH", "UNION", "UNWIND", "AND", "AS", 
        "CONTAINS", "DISTINCT", "ENDS", "IN", "IS", "NOT", "OR", "STARTS", 
        "XOR", "FALSE", "TRUE", "NULL_W", "CONSTRAINT", "DO", "FOR", "REQUIRE", 
        "UNIQUE", "CASE", "WHEN", "THEN", "ELSE", "END", "MANDATORY", "SCALAR", 
        "OF", "ADD", "DROP", "ESC_LITERAL", "CHAR_LITERAL", "STRING_LITERAL", 
        "Integer", "DIGIT", "FLOAT", "ID", "IdentifierStart", "IdentifierPart", 
        "Letter", "SP", "WHITESPACE", "Comment"
    ];
    public static readonly ruleNames = [
        "script", "query", "regularQuery", "singleQuery", "standaloneCall", 
        "returnSt", "withSt", "skipSt", "limitSt", "projectionBody", "projectionItems", 
        "projectionItem", "orderItem", "orderSt", "singlePartQ", "multiPartQ", 
        "matchSt", "unwindSt", "readingStatement", "updatingStatement", 
        "deleteSt", "removeSt", "removeItem", "queryCallSt", "parenExpressionChain", 
        "yieldItems", "yieldItem", "mergeSt", "mergeAction", "setSt", "setItem", 
        "nodeLabels", "createSt", "patternWhere", "where", "pattern", "expression", 
        "xorExpression", "andExpression", "notExpression", "comparisonExpression", 
        "comparisonSigns", "addSubExpression", "multDivExpression", "powerExpression", 
        "unaryAddSubExpression", "atomicExpression", "listExpression", "stringExpression", 
        "stringExpPrefix", "nullExpression", "propertyOrLabelExpression", 
        "propertyExpression", "patternPart", "patternElem", "patternElemChain", 
        "properties", "nodePattern", "atom", "lhs", "relationshipPattern", 
        "relationDetail", "rangeLit", "relationshipTypes", "unionSt", "subqueryExist", 
        "invocationName", "functionInvocation", "parenthesizedExpression", 
        "filterWith", "patternComprehension", "relationshipsChainPattern", 
        "listComprehension", "filterExpression", "countAll", "expressionChain", 
        "caseExpression", "parameter", "literal", "boolLit", "numLit", "stringLit", 
        "charLit", "listLit", "mapLit", "mapPair", "name", "symbol", "reservedWord",
    ];

    public get grammarFileName(): string { return "CypherParser.g4"; }
    public get literalNames(): (string | null)[] { return CypherParser.literalNames; }
    public get symbolicNames(): (string | null)[] { return CypherParser.symbolicNames; }
    public get ruleNames(): string[] { return CypherParser.ruleNames; }
    public get serializedATN(): number[] { return CypherParser._serializedATN; }

    protected createFailedPredicateException(predicate?: string, message?: string): antlr.FailedPredicateException {
        return new antlr.FailedPredicateException(this, predicate, message);
    }

    public constructor(input: antlr.TokenStream) {
        super(input);
        this.interpreter = new antlr.ParserATNSimulator(this, CypherParser._ATN, CypherParser.decisionsToDFA, new antlr.PredictionContextCache());
    }
    public script(): ScriptContext {
        let localContext = new ScriptContext(this.context, this.state);
        this.enterRule(localContext, 0, CypherParser.RULE_script);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 179;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 99) {
                {
                this.state = 178;
                this.match(CypherParser.SP);
                }
            }

            this.state = 181;
            this.query();
            this.state = 183;
            this.errorHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this.tokenStream, 1, this.context) ) {
            case 1:
                {
                this.state = 182;
                this.match(CypherParser.SP);
                }
                break;
            }
            this.state = 186;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 9) {
                {
                this.state = 185;
                this.match(CypherParser.SEMI);
                }
            }

            this.state = 189;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 99) {
                {
                this.state = 188;
                this.match(CypherParser.SP);
                }
            }

            this.state = 191;
            this.match(CypherParser.EOF);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public query(): QueryContext {
        let localContext = new QueryContext(this.context, this.state);
        this.enterRule(localContext, 2, CypherParser.RULE_query);
        try {
            this.state = 195;
            this.errorHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this.tokenStream, 4, this.context) ) {
            case 1:
                this.enterOuterAlt(localContext, 1);
                {
                this.state = 193;
                this.regularQuery();
                }
                break;
            case 2:
                this.enterOuterAlt(localContext, 2);
                {
                this.state = 194;
                this.standaloneCall();
                }
                break;
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public regularQuery(): RegularQueryContext {
        let localContext = new RegularQueryContext(this.context, this.state);
        this.enterRule(localContext, 4, CypherParser.RULE_regularQuery);
        let _la: number;
        try {
            let alternative: number;
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 197;
            this.singleQuery();
            this.state = 204;
            this.errorHandler.sync(this);
            alternative = this.interpreter.adaptivePredict(this.tokenStream, 6, this.context);
            while (alternative !== 2 && alternative !== antlr.ATN.INVALID_ALT_NUMBER) {
                if (alternative === 1) {
                    {
                    {
                    this.state = 199;
                    this.errorHandler.sync(this);
                    _la = this.tokenStream.LA(1);
                    if (_la === 99) {
                        {
                        this.state = 198;
                        this.match(CypherParser.SP);
                        }
                    }

                    this.state = 201;
                    this.unionSt();
                    }
                    }
                }
                this.state = 206;
                this.errorHandler.sync(this);
                alternative = this.interpreter.adaptivePredict(this.tokenStream, 6, this.context);
            }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public singleQuery(): SingleQueryContext {
        let localContext = new SingleQueryContext(this.context, this.state);
        this.enterRule(localContext, 6, CypherParser.RULE_singleQuery);
        try {
            this.state = 209;
            this.errorHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this.tokenStream, 7, this.context) ) {
            case 1:
                this.enterOuterAlt(localContext, 1);
                {
                this.state = 207;
                this.singlePartQ();
                }
                break;
            case 2:
                this.enterOuterAlt(localContext, 2);
                {
                this.state = 208;
                this.multiPartQ();
                }
                break;
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public standaloneCall(): StandaloneCallContext {
        let localContext = new StandaloneCallContext(this.context, this.state);
        this.enterRule(localContext, 8, CypherParser.RULE_standaloneCall);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 211;
            this.match(CypherParser.CALL);
            this.state = 213;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 99) {
                {
                this.state = 212;
                this.match(CypherParser.SP);
                }
            }

            this.state = 215;
            this.invocationName();
            this.state = 217;
            this.errorHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this.tokenStream, 9, this.context) ) {
            case 1:
                {
                this.state = 216;
                this.match(CypherParser.SP);
                }
                break;
            }
            this.state = 220;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 12) {
                {
                this.state = 219;
                this.parenExpressionChain();
                }
            }

            this.state = 233;
            this.errorHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this.tokenStream, 14, this.context) ) {
            case 1:
                {
                this.state = 223;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
                if (_la === 99) {
                    {
                    this.state = 222;
                    this.match(CypherParser.SP);
                    }
                }

                this.state = 225;
                this.match(CypherParser.YIELD);
                this.state = 227;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
                if (_la === 99) {
                    {
                    this.state = 226;
                    this.match(CypherParser.SP);
                    }
                }

                this.state = 231;
                this.errorHandler.sync(this);
                switch (this.tokenStream.LA(1)) {
                case CypherParser.MULT:
                    {
                    this.state = 229;
                    this.match(CypherParser.MULT);
                    }
                    break;
                case CypherParser.FILTER:
                case CypherParser.EXTRACT:
                case CypherParser.COUNT:
                case CypherParser.ANY:
                case CypherParser.NONE:
                case CypherParser.SINGLE:
                case CypherParser.ESC_LITERAL:
                case CypherParser.Integer:
                case CypherParser.DIGIT:
                case CypherParser.ID:
                    {
                    this.state = 230;
                    this.yieldItems();
                    }
                    break;
                default:
                    throw new antlr.NoViableAltException(this);
                }
                }
                break;
            }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public returnSt(): ReturnStContext {
        let localContext = new ReturnStContext(this.context, this.state);
        this.enterRule(localContext, 10, CypherParser.RULE_returnSt);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 235;
            this.match(CypherParser.RETURN);
            this.state = 237;
            this.errorHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this.tokenStream, 15, this.context) ) {
            case 1:
                {
                this.state = 236;
                this.match(CypherParser.SP);
                }
                break;
            }
            this.state = 239;
            this.projectionBody();
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public withSt(): WithStContext {
        let localContext = new WithStContext(this.context, this.state);
        this.enterRule(localContext, 12, CypherParser.RULE_withSt);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 241;
            this.match(CypherParser.WITH);
            this.state = 243;
            this.errorHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this.tokenStream, 16, this.context) ) {
            case 1:
                {
                this.state = 242;
                this.match(CypherParser.SP);
                }
                break;
            }
            this.state = 245;
            this.projectionBody();
            this.state = 250;
            this.errorHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this.tokenStream, 18, this.context) ) {
            case 1:
                {
                this.state = 247;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
                if (_la === 99) {
                    {
                    this.state = 246;
                    this.match(CypherParser.SP);
                    }
                }
